Fixed template insertion in pdf